[package]
name = "pixelherd"
version = "0.1.0"
authors = ["djugei <ddjugei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = "*"
piston = "*"
piston2d-graphics = { version = "*", features = ["glyph_cache_rusttype"] }
pistoncore-sdl2_window = "*"
piston2d-opengl_graphics = "*"
#opengles_graphics = { version = "*", path = "../opengles_graphics_updated" }


rand = "*"
inline_tweak = "*"


rayon = "*"
atomic = "*"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 3
