[package]
name = "anti-r"
version = "0.1.0"
authors = ["djugei <ddjugei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
rstar = "*"
rand = "*"

[[bench]]
name = "r_vs_no"
harness = false

[features]
default = ["alloc"]
alloc = []

