[package]
name = "anti-r"
version = "0.9.1"
authors = ["djugei <ddjugei@gmail.com>"]
edition = "2018"
description = "A spatial data structure outperforming r-trees in some cases"
license = "Apache-2.0"
repository = "https://github.com/djugei/pixelherd"
categories = ["algorithms", "data-structures", "game-development", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
rstar = "0.8.2"
rand = "0.8.3"

[[bench]]
name = "r_vs_no"
harness = false

[features]
default = ["alloc"]
alloc = []

