[package]
name = "anti-r"
version = "0.9.2"
authors = ["djugei <ddjugei@gmail.com>"]
edition = "2018"
description = "A spatial data structure outperforming r-trees for low numbers of elements"
license = "Apache-2.0"
repository = "https://github.com/djugei/pixelherd"
categories = ["algorithms", "data-structures", "game-development", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = {version = "0.6", features = ["html_reports",]}
rstar = "0.12"
rand = "0.9"

[[bench]]
name = "r_vs_no"
harness = false

[features]
default = ["alloc"]
alloc = []

