[package]
name = "fix-rat"
version = "0.1.0"
authors = ["djugei <ddjugei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.120" , optional = true, features = ["derive"]}

[dev-dependencies]
bincode = { version = "1.3.1" }

[features]
default = ["nightly", "serde1"]
nightly = []
serde1 = ["serde"]
