[package]
name = "fix-rat"
version = "0.1.1"
authors = ["djugei <ddjugei@gmail.com>"]
edition = "2018"
description = "A rational number type with fixed denominator"
license = "Apache-2.0"
repository = "https://github.com/djugei/pixelherd"
categories = ["mathematics", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.120" , optional = true, features = ["derive"]}

[dev-dependencies]
bincode = { version = "1.3.1" }

[features]
default = ["nightly", "serde1"]
nightly = []
serde1 = ["serde"]
