[package]
name = "fix-rat"
version = "0.2.0"
authors = ["djugei <ddjugei@gmail.com>"]
edition = "2024"
description = "A rational number type with fixed denominator"
license = "Apache-2.0"
repository = "https://github.com/djugei/pixelherd"
categories = ["mathematics", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
serde = { version = "1.0.219" , optional = true, features = ["derive"]}
bytemuck = { version = "1.23.1" }

[dev-dependencies]
bincode = { version = "2.0.1" }

[features]
default = ["nightly", "serde1"]
nightly = []
serde1 = ["serde", "bincode/serde"]
