[package]
name = "pixelherd"
version = "0.1.0"
authors = ["djugei <ddjugei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anti-r = {path= "../anti-r"}
piston = "*"
piston2d-graphics = { version = "*", features = ["glyph_cache_rusttype"] }
pistoncore-sdl2_window = "*"
piston2d-opengl_graphics = "*"
#opengles_graphics = { version = "*", path = "../opengles_graphics_updated" }
font-kit = "*"


rand = "0.8"
rand_pcg = { version = "*", features = ["serde1"] } 
inline_tweak = "*"


rayon = "*"
atomic = "*"
fix-rat = {path="../fix-rat", features = ["serde1"]}

serde = "*"
serde_derive = "*"
bigmatrix = {path="../bigmatrix"}
bincode = { version="1.3" }
